--- a/style.css
+++ b/style.css
@@ -1,13 +1,41 @@
-/* CSS */
-#iframe-container {
+  body {
+    background-color: #ffcc00;
+  }
+
+  #iframe-container {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 10px;
+  }
+  
+  .iframe-container {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+  }
+  
+  .button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-top: 10px;
   }
   
   iframe {
     width: 640px;
     height: 360px;
-    margin: 10px;
   }
+  
+  .delete-button {
+    margin-top: 0px;
+  }
+  .refresh-button {
+    margin-left: 10px;
+  }
+  
+  input[type="text"] {
+    width: 300px;
+  }
+  
   
   
